Fix layout break in 応募する button in particular width

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -78,7 +78,7 @@ header{
   color: #fff;
   margin: auto;
   margin-right: 24px;
-  padding: 12px 36px;
+  padding: 12px 21px;
 }
 .header-left{
   @media screen and (min-width:$header-phone) {
